# GameOfLifeTest

./: CMakeLists.txt  Cell.cpp  Cell.hpp  ChallengeDescription.txt  ConsoleOutput.cpp  ConsoleOutput.hpp  GameOfLife.cpp  GameOfLife.hpp  IObserver.hpp  IPublisher.hpp  README.md  main.cpp
